--- a/style.css
+++ b/style.css
@@ -1,29 +1,90 @@
-body {
-    margin: 0;
-    background-color: slategrey;
-    background-size: cover;
-}
-.body{
-   
+#back{
+  background-color: lightgray;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
 }
 
-.header{
-    display: flex;
-    justify-content: space-around;;
-    flex-wrap: nowrap;
+.refr:hover {
+  -webkit-transform: scaleX(-1);
+  transform: scaleX(-1);
 }
-.videoPlayer{
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: nowrap;
+
+.hed{
+  margin-top: 20px;
+  padding-top: 20px;
+  text-align: center;
+  text-shadow: 0 0 3px #FF0000;
 }
-.rankingStats{
-    display: flex;
-    flex-direction: column;
-    align-content: space-evenly;
-    margin-left:4rem;
-    margin-right:4rem;
+
+#for{
+  margin:auto;
+  text-align: center;
 }
-.table{
-    border: solid
+
+input[type=submit]{
+  background-color: bisque;
+  color: black;
+  cursor: pointer;
+}
+
+#vid1{
+  color: white;
+  text-shadow: 2px 2px 4px #000000;
+  text-align: center;
+  float: left;
+  width: 45%;
+  height: 450px;
+  margin-bottom: 15px;
+}
+
+.butto{
+  margin-top: 10px;
+  background-color: bisque;
+  color: black;
+  width: 60px;
+  height: 60px;
+  border-radius: 30%;
+  transition-duration: 0.4s;
+}
+
+.butto:hover{
+  box-shadow: 0 12px 16px 0 rgba(255, 115, 0, 0.8), 0 17px 50px 0 rgba(255, 174, 0, 0.8);
+}
+
+#vid2{
+  color: white;
+  text-shadow: 2px 2px 4px #000000;
+  text-align: center;
+  float: right;
+  width: 45%;
+  height: 450px;
+}
+
+#vid3{
+  color: white;
+  text-shadow: 2px 2px 4px #000000;
+  margin-top: 15px;
+  text-align: center;
+  clear:both;
+  margin: auto;
+  width: 45%;
+  height: 450px;
+}
+
+iframe {
+  width: 80%;
+  height: 350px;
+}
+
+#tabl {
+  border: 2px solid black;
+  width: 80%;
+  margin: auto;
+}
+
+th, td {
+  color: rgb(0, 0, 0);
+  text-shadow: 2px 2px 4px #000000;
+  padding: 15px;
+  text-align: center;
 }
